# opencv

./: CMakeLists.txt  LICENCE  README.md  cv.vcxproj  opencv.sln  premake5.lua  program.cpp
src/: program.cpp  program.cpp.base
